<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IConnect</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">220966024694229</string>
    
    <string name="cad_act_et_usr_hint">Nome de Usuário</string>
    <string name="cad_act_et_pwd_hint">Senha</string>
    <string name="cad_act_et_pwd_hint2">Repita a Senha</string>
    <string name="cad_act_bt_cad">CADASTRAR</string>
    <string name="cad_act_bt_voltar">VOLTAR</string>
    <string name="cad_act_logo_desc">Logotipo</string>
    
    <string name="dial_help_title">Ajuda</string>
    
    <string name="dial_face_title">Publicar no Facebook</string>
    <string name="dial_feed_title">Enviar Feedback</string>
    <string name="dial_face_icon_desc">Facebook Icon</string>
    <string name="dial_feed_icon_desc">Feedback Icon</string>
    <string name="dial_face_bt_canc">Cancelar</string>
    <string name="dial_face_bt_pub">Publicar</string>
    <string name="dial_feed_bt_pub">Enviar</string>
    
    <string name="dial_mail_icon_desc">Mail Icon</string>
    <string name="dial_mail_title">Enviar Email</string>
    <string name="dial_mail_et_dest_hint">Destinatário</string>
    <string name="dial_mail_et_rem_hint">Remetente</string>
    <string name="dial_mail_et_subj_hint">Assunto</string>
    <string name="dial_mail_et_mes_hint">Mensagem</string>
    <string name="dial_mail_bt_canc">Cancelar</string>
    <string name="dial_mail_bt_env">Enviar</string>
    <string name="dial_mail_email_inc">Endereço de Email inválido!</string>
    
    <string name="dial_tw_title">Publicar no Twitter</string>
    <string name="dial_tw_icon_desc">Twitter Icon</string>
    <string name="dial_tw_bt_canc">Cancelar</string>
    <string name="dial_tw_bt_pub">Publicar</string>
    
    <string name="log_act_logo_desc">Logotipo</string>
    <string name="log_act_et_usr_hint">Nome de Usuário</string>
    <string name="log_act_et_pwd_hint">Senha</string>
    <string name="log_act_bt_ent">ENTRAR</string>
    <string name="log_act_bt_cad">CADASTRAR</string>
    <string name="log_act_cb_man_con">Manter Conectado</string>
    
    <string name="main_act_logo_desc">Logotipo</string> 
    <string name="main_act_face_icon_desc">Facebook Icon</string>
    <string name="main_act_tw_icon_desc">Twitter Icon</string>
    <string name="main_act_mail_icon_desc">Mail Icon</string>
    <string name="main_act_help_icon_desc">Help Icon</string>
    <string name="main_act_bt_exit_icon_desc">Exit Icon</string>
    <string name="main_act_bt_face_title">Facebook</string>
    <string name="main_act_bt_tw_title">Twitter</string>
    <string name="main_act_bt_mail_title">Email</string>
    <string name="main_act_bt_help_title">Ajuda</string>
    
    <string name="face_auth_face_icon_desc">Facebook Icon</string>
    <string name="face_auth_title">Ativar</string>
    
    <string name="cad_act_cb_man_con">Manter Conectado</string>
    
    <string name="dial_mais_feed">Feedback</string>
    <string name="dial_mais_logoff">Fazer Logoff</string>
    <string name="dial_mais_des_face">Desativar Facebook</string>
    <string name="dial_mais_des_twt">Desativar Twitter</string>
    <string name="dial_mais_feed_desc">Feedback Icon</string>
    <string name="dial_mais_logoff_desc">Logoff Icon</string>
    <string name="dial_mais_des_face_desc">Facebook Icon</string>
    <string name="dial_mais_des_twt_desc">Twitter Icon</string>
    <string name="dial_mais_title">Opções:</string>
    <string name="dial_mais_desat_face">Deseja cancelar as publicações no seu Facebook pelo Iconnect?</string>
    <string name="dial_mais_desat_twt">Deseja cancelar as publicações no seu Twitter pelo Iconnect?</string>
    <string name="dial_mais_logoff_message">Deseja mesmo sair?</string>
    
    <string name="html_help_file">file:///android_asset/help-pt.html</string>
    <string name="html_face_file">file:///android_asset/facebook-pt.html</string>
    
    <string name="resp_positiva">Sim</string>
	<string name="resp_negativa">Não</string>
	<string name="bt_fechar">Fechar</string>
	<string name="alert_dialog_title">Atenção</string>
    
    <string name="cad_act_mess1">Usuário deve ter pelo menos 4 caracteres.</string>
    <string name="cad_act_mess2">Senha deve ter pelo menos 4 caracteres.</string>
    <string name="cad_act_mess3">As senhas não correspondem.</string>
    
    <string name="log_act_mess">Usuário ou senha inválidos.</string>
    
    <string name="main_act_mess">Para primeiro acesso é necessário estar conectado à internet.</string>

    <string name="main_act_face_dialog">Aguarde...</string>
    
    <string name="dial_feed_mess">O campo de texto está vazio.</string>
    
</resources>