<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="10" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:background="#3B5998"
        android:gravity="center|left"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/dial_mail_icon_desc"
            android:src="@drawable/email2" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/dial_mail_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etRemetente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/et2"
            android:ems="14"
            android:hint="@string/dial_mail_et_rem_hint"
            android:maxLength="40" >
            
        </EditText>
        
        <EditText
            android:id="@+id/etDestinatario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/et2"
            android:ems="14"
            android:hint="@string/dial_mail_et_dest_hint"
            android:maxLength="40" >
                    
        	<requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etAssunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/et2"
            android:ems="14"
            android:hint="@string/dial_mail_et_subj_hint"
            android:maxLength="20" />

        <EditText
            android:id="@+id/etMensagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/et2"
            android:ems="14"
            android:hint="@string/dial_mail_et_mes_hint"
            android:inputType="textMultiLine"
            android:maxLength="120"
            android:minLines="3" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="right"
            android:weightSum="2" >

            <Button
                android:id="@+id/btCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/bt2"
                android:text="@string/dial_mail_bt_canc"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/bt2"
                android:text="@string/dial_mail_bt_env"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout> 